[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "rvc-orchestrator-worker"
version = "0.1.0"
description = "GPU worker agent for RVC Training Orchestrator"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "PyYAML>=6.0,<7",
  "rvc-orchestrator-contracts>=0.1.0,<0.2.0",
]

[project.scripts]
rvc-worker = "rvc_worker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
